# CommuniAPI

./: .gitignore  CommuniApi.py  README.md  TestCommuniApp.py  generate_pyproj.py  main.ipynb  pyproject.toml  readme.md  requirements.txt  setup.py  version.py  versions.py
.github/workflows/: python-test.yml  python-unittest.yml  release.yml
CommuniAPI/: CommuniApi.py  __init__.py  churchToolsActions.py
CommuniApi/: __init__.py  churchToolsActions.py  communiActions.py
communi_api/: churchToolsActions.py  communiActions.py  communi_api.py
secure/: config.py
src/: __init__.py  churchToolsActions.py  communiActions.py
tests/: test_CommuniApi.py  test_communi_api.py
